--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
-
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
     "react-hot-toast": "^2.4.1",
@@ -25,7 +25,9 @@
     "react-router-dom": "^6.22.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
